--- a/app/src/main/res/layout/activity_ayuda_mejorar.xml
+++ b/app/src/main/res/layout/activity_ayuda_mejorar.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     xmlns:fancy="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="@color/colorLightPrimary"
     tools:context=".AyudaMejorarActivity">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -21,34 +22,42 @@
         android:background="@color/colorPrimary"
         android:elevation="4dp">
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/atras_config"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="10dp"
-                android:onClick="IrConfigAyuda"
-                android:src="@drawable/ic_arrow_back_black_48dp" />
-
-            <TextView
-                android:id="@+id/textTitle"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
+                android:layout_marginStart="10dp"
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/atras_config"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:onClick="IrConfigAyuda"
+                    android:src="@drawable/ic_arrow_back_black_48dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
-                android:layout_marginTop="15dp"
-                android:layout_toEndOf="@+id/atras_config"
-                android:text="Ayudanos a mejorar"
-                android:textColor="@color/colorPrimaryText"
-                android:textSize="20dp" />
-        </RelativeLayout>
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Ayudanos a mejorar"
+                    android:textColor="@color/colorPrimaryText"
+                    android:textSize="20dp" />
+            </LinearLayout>
+        </LinearLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
     <ScrollView
@@ -61,107 +70,214 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:src="@drawable/logocompleto" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Nos interesa conocer opinón."
+            android:textColor="@color/colorPrimaryText"
+            android:textAlignment="center" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Comentanos por medio de un mensaje si fue de tu agrado PinClassroom o que desearias que mejoraramos."
+            android:textAlignment="center"
+            android:textColor="@color/colorPrimaryText"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textAlignment="center" />
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="2dp"
+        app:cardBackgroundColor="#FFFFFF"
+        app:cardCornerRadius="10dp"
+        app:cardUseCompatPadding="true">
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            app:cardBackgroundColor="@color/colorPrimary"
+            app:cardUseCompatPadding="true"
+            app:cardCornerRadius="5dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Comentarios"
+                android:textAlignment="center"
+                android:textSize="20dp"
+                android:layout_marginTop="5dp"/>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="45dp"
+            app:cardBackgroundColor="#FFFFFF"
+            app:cardUseCompatPadding="true"
+            app:cardCornerRadius="5dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textAlignment="center" />
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="25dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginEnd="24dp"
+                    app:boxStrokeColor="#FF0000"
+                    app:hintTextAppearance="@style/Hint">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/et_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ems="10"
+                        android:hint="Escribenos tu opinión..."
+                        android:inputType="textMultiLine"
+                        android:paddingTop="15dp"
+                        android:textSize="12dp" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textAlignment="center" />
+
+                <mehdi.sakout.fancybuttons.FancyButton
+                    android:id="@+id/btn_submit"
+                    android:layout_width="120dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="5dip"
+                    android:text="Enviar "
+                    android:textAlignment="center"
+                    android:textColor="#FFFFFF"
+                    android:textSize="15dp"
+                    fancy:fb_borderColor="#FFFFFF"
+                    fancy:fb_borderWidth="1dp"
+                    fancy:fb_defaultColor="@color/colorPrimary"
+                    fancy:fb_focusColor="@color/colorPrimaryDark"
+                    fancy:fb_radius="10dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textAlignment="center" />
+            </LinearLayout>-->
+        </androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
+        </LinearLayout>
+
+    </ScrollView>
+
+
+    <!--<ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/action_bar_activity_content"
+        android:layout_marginTop="55dp"
+        android:padding="12dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:orientation="vertical">
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:src="@drawable/logocompleto"/>
+                android:src="@drawable/logocompleto" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:text="Nos interesa conocer opinón."
-                android:textAlignment="center"
-                android:layout_marginTop="10dp"/>
+                android:textAlignment="center" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Comentanos por medio de un mensaje si fue de tu agrado PinClassroom o que desearias que mejoraramos."
-                android:textAlignment="center"/>
+                android:textAlignment="center" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text=""
-                android:textAlignment="center"/>
+                android:textAlignment="center" />
 
-            <!--<LinearLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Para: "
+                    android:layout_gravity="center"
+                    android:text="Mensaje"
                     android:textSize="20dp" />
 
                 <EditText
-                    android:layout_marginStart="35dp"
-                    android:id="@+id/et_to"
+                    android:id="@+id/et_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="15dp"
-                    android:enabled="false"
-                    android:hint="Receptor"
-                    android:text="pinclassroom.2019@gmail.com" />
+                    android:hint="Escribenos tu opinión..."
+                    android:inputType="textMultiLine"
+                    android:textSize="15dp" />
             </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="De: "
-                android:textSize="20dp" />
-            <EditText
-                android:layout_marginStart="53dp"
-                android:id="@+id/et_sub"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="15dp"
-                android:enabled="false"
-                android:hint="Emisor" />
-        </LinearLayout>-->
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginEnd="40dp"
-            android:layout_marginStart="40dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Mensaje"
-                android:textSize="20dp"
-                android:layout_gravity="center"/>
-
-            <EditText
-                android:id="@+id/et_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="15dp"
-                android:hint="Escribenos tu opinión..."
-                android:inputType="textMultiLine" />
-        </LinearLayout>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text=""
-                android:textAlignment="center"/>
+                android:textAlignment="center" />
 
             <mehdi.sakout.fancybuttons.FancyButton
                 android:id="@+id/btn_submit"
                 android:layout_width="120dp"
                 android:layout_height="40dp"
-                android:layout_marginTop="5dip"
-                android:textAlignment="center"
                 android:layout_gravity="center"
+                android:layout_marginTop="5dip"
                 android:text="Enviar "
+                android:textAlignment="center"
                 android:textColor="#FFFFFF"
                 android:textSize="15dp"
                 fancy:fb_borderColor="#FFFFFF"
@@ -172,5 +288,5 @@
 
         </LinearLayout>
 
-    </ScrollView>
+    </ScrollView>-->
 </RelativeLayout>
