--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorLightPrimary"
     android:orientation="vertical"
     tools:context=".ConfigActivity">
 
@@ -19,212 +20,224 @@
         android:background="@color/colorPrimary"
         android:elevation="4dp">
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/atras_config"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="10dp"
-                android:src="@drawable/ic_arrow_back_black_48dp"
-                android:onClick="IrInicioConfig"/>
-
-            <TextView
-                android:id="@+id/textTitle"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
+                android:layout_marginStart="10dp"
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/atras_config"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:onClick="IrInicioConfig"
+                    android:src="@drawable/ic_arrow_back_black_48dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
-                android:layout_marginTop="15dp"
-                android:layout_toEndOf="@+id/atras_config"
-                android:text="Configuraciones"
-                android:textColor="@color/colorPrimaryText"
-                android:textSize="20dp" />
-        </RelativeLayout>
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Configuraciones"
+                    android:textColor="@color/colorPrimaryText"
+                    android:textSize="20dp" />
+            </LinearLayout>
+        </LinearLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:onClick="IrEnviarPerfil"
-        android:clickable="true"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/img_perfil"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/ic_person" />
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:orientation="vertical">
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="0dp"
+            android:background="@color/colorText_Icon"
+            android:clickable="true"
+            android:onClick="IrEnviarPerfil"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/txt_edit_perfil"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Mi Perfil"
-                android:textColor="@color/colorPrimaryText"
-                android:textSize="20dp"
-                android:textStyle="bold" />
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/txt_info_perfil"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/txt_nombre"
-                android:layout_marginRight="10dp"
-                android:layout_marginBottom="15dp"
-                android:text="Gestiona tu información personal."
-                android:textColor="@color/colorSecondaryText" />
+                <ImageView
+                    android:id="@+id/img_perfil"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/ic_person" />
+            </LinearLayout>
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:orientation="vertical">
 
                 <TextView
-                    android:layout_width="310dp"
-                    android:layout_height="2dp"
-                    android:layout_alignParentEnd="true"
-                    android:background="@color/colorPrimaryDark" />
-            </RelativeLayout>
+                    android:id="@+id/txt_edit_perfil"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="Mi Perfil"
+                    android:textColor="@color/colorPrimaryText"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/txt_info_perfil"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/txt_nombre"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="15dp"
+                    android:text="Gestiona tu información personal."
+                    android:textColor="@color/colorSecondaryText"
+                    android:textSize="13dp" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
-
-
-
-
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:clickable="true"
-        android:onClick="IrEnviarSMS"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/img_mejorar"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/ic_mejorar" />
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:orientation="vertical">
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="0dp"
+            android:clickable="true"
+            android:onClick="IrEnviarSMS"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/txt_mejorar"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Ayudanos a mejorar"
-                android:textColor="@color/colorPrimaryText"
-                android:textSize="20dp"
-                android:textStyle="bold" />
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical">
 
-            <!--Comentanos acerca de tu experienza con nuestra app o tambien en caso de problemas y que quieres que mejore.-->
-            <TextView
-                android:id="@+id/txt_info_mejorar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/txt_nombre"
-                android:layout_marginRight="10dp"
-                android:layout_marginBottom="15dp"
-                android:text="Envia un mensaje contandonos de tu experiencia con PinClassroom."
-                android:textColor="@color/colorSecondaryText" />
-            <RelativeLayout
+                <ImageView
+                    android:id="@+id/img_mejorar"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/ic_mejorar" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:orientation="vertical">
 
                 <TextView
-                    android:layout_width="310dp"
-                    android:layout_height="2dp"
-                    android:layout_alignParentEnd="true"
-                    android:background="@color/colorPrimaryDark" />
-            </RelativeLayout>
+                    android:id="@+id/txt_mejorar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="Ayudanos a mejorar"
+                    android:textColor="@color/colorPrimaryText"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+
+                <!--Comentanos acerca de tu experienza con nuestra app o tambien en caso de problemas y que quieres que mejore.-->
+                <TextView
+                    android:id="@+id/txt_info_mejorar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/txt_nombre"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="15dp"
+                    android:text="Cuentanos tu experiencia con PinClassroom."
+                    android:textColor="@color/colorSecondaryText"
+                    android:textSize="13dp" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
 
+    </androidx.cardview.widget.CardView>
 
-
-
-
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:clickable="true"
-        android:onClick="IrEnviarAcercaDe"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/img_about"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/ic_about" />
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:orientation="vertical">
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="0dp"
+            android:clickable="true"
+            android:onClick="IrEnviarAcercaDe"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/txt_acerca_de"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Acerca de..."
-                android:textColor="@color/colorPrimaryText"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/txt_info_acerca_de"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/txt_nombre"
-                android:layout_marginRight="10dp"
-                android:layout_marginBottom="15dp"
-                android:text="Conoce un poco de PinClassroom y su equipo."
-                android:textColor="@color/colorSecondaryText" />
-            <RelativeLayout
+                <ImageView
+                    android:id="@+id/img_about"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/ic_about" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:orientation="vertical">
 
                 <TextView
-                    android:layout_width="310dp"
-                    android:layout_height="2dp"
-                    android:layout_alignParentEnd="true"
-                    android:background="@color/colorPrimaryDark" />
-            </RelativeLayout>
+                    android:id="@+id/txt_acerca_de"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="Acerca de..."
+                    android:textColor="@color/colorPrimaryText"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/txt_info_acerca_de"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/txt_nombre"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="15dp"
+                    android:text="Conoce un poco de PinClassroom y su equipo."
+                    android:textColor="@color/colorSecondaryText"
+                    android:textSize="13dp" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
 
-
-
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
