--- a/app/src/main/res/layout/view_lista_aulas.xml
+++ b/app/src/main/res/layout/view_lista_aulas.xml
@@ -1,31 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="16dp"
-    android:clickable="true"
-    android:background="?attr/selectableItemBackground">
+    app:cardCornerRadius="0dp"
+    android:layout_margin="7dp"
+    android:elevation="90dp">
 
-    <TextView
-        android:id="@+id/txt_nombre"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="xxxxxxxxxx"
-        android:textColor="@color/colorPrimaryText"
-        android:textSize="25sp"
-        android:textStyle="bold" />
+        android:background="#ffffff"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:scaleType="centerCrop"
+            android:layout_margin="10dp"
+            android:id="@+id/foto_aula"
+            android:src="@drawable/ic_domain_black_48dp"/>
 
-    <TextView
-        android:id="@+id/txt_edificio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/txt_nombre"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="15dp"
-        android:text="xxxxxxxxxx"
-        android:textColor="@color/colorPrimaryText" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="10dp"
+            android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/nombre_aula"
+            android:text="(NOMBRE DEL AULA)"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
+            android:textSize="20sp"
+            android:textColor="#000000"/>
+
+        <TextView
+            android:id="@+id/edificio_aula"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingEnd="5dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingStart="5dp"
+            android:text="(NOMBRE DEL EDIFICIO)"
+            android:textColor="#000000" />
+        </LinearLayout>
+
+
+
+    </LinearLayout>
 
     <!--<LinearLayout
         android:layout_width="match_parent"
@@ -73,4 +100,4 @@
         android:layout_below="@id/img_aula"
         android:layout_marginTop="11dp"
         android:background="@color/colorPrimaryDark" />-->
-</LinearLayout>
+</androidx.cardview.widget.CardView>
