--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimaryDark">#D32F2F</color>
-    <color name="colorLightPrimary">#FFCDD2</color>
+    <color name="colorLightPrimary">#FFDCDC</color>
     <color name="colorPrimary">#F44336</color>
     <color name="colorText_Icon">#FFFFFF</color>
     <color name="colorAccent">#607D8B</color>
